# cloud-config-validator

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  tox.ini
.github/workflows/: cd.yaml  ci.yaml  snap.yaml
benches/: validator.rs
ccv-cli/: Cargo.toml  README.md
ccv-cli/src/: main.rs
ccv-cli/tests/: cli.rs
ccv-core/: Cargo.toml
ccv-core/benches/: validator.rs
ccv-core/src/: error.rs  lib.rs  schema.rs  validator.rs
ccv-server/: Cargo.toml  README.md
ccv-server/src/: api.rs  error.rs  lib.rs  main.rs
load-test/: README.md  rayon_1000_20000  simple.json
schemas/: versions.schema.cloud-config.json  versions.schema.cloud-config.resolved.1.json  versions.schema.cloud-config.resolved.json
snap/: snapcraft.yaml
src/: api.rs  error.rs  handlers.rs  lib.rs  main.rs  schema.rs  state.rs  telemetry.rs  validator.rs
tests/: test_integration.py
tests/data/: cloud_init_examples.json  test_cases.json
tools/: extract_cloud_init_examples.py  resolver.py  run_tests.sh
