[package]
name = "cloud-config-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
axum = "0.6.1"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
jsonschema = { version = "0.16.1", default-features = false }
rayon = "1.6.1"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
thiserror = "1.0.38"
tokio = { version = "1.23.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version="0.3.16", features = ["registry", "env-filter"] }
url = "2.3.1"

[dev-dependencies]
axum-test-helper = "0.1.1"
criterion = "0.4.0"

[[bench]]
name = "validator"
harness = false
