[package]
name = "cloud-config-validator"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Contreras <alberto.contreras@canonical.com>"]
publish = false

[[bench]]
name = "validator"
harness = false

[dependencies]
async-recursion = "1.0.4"
axum = "0.6.19"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
jsonschema = { version = "0.17.1", default-features = false }
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version="0.3.17", features = ["registry", "env-filter"] }
url = "2.3.1"

[dev-dependencies]
axum-test-helper = "0.3.0"
criterion = "0.5.1"
