[workspace]
resolver = "2"

members = [
    "ccv-cli",
    "ccv-core",
    "ccv-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alberto Contreras <alberto.contreras@canonical.com>"]
publish = false

[workspace.dependencies]
ccv-core = { path = "./ccv-core" }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
