[package]
name = "ccv-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ccv-core.workspace = true
clap = { version = "4.4.7", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
