[package]
name = "ccv-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ccv-core.workspace = true
clap = { version = "4.4.7", features = ["derive", "string"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.1.0"
predicates = "3.0.4"
