[package]
name = "ccv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
futures = "0.3.28"
jsonschema = { version = "0.17.1", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9.25"
thiserror = "1.0.44"

[dev-dependencies]
axum-test-helper = "0.3.0"
criterion = "0.5.1"
tokio.workspace = true

[[bench]]
name = "validator"
harness = false
