[package]
name = "ccv-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
ccv-core.workspace = true
hyper = { version = "0.14.27", features = ["full"] }
rayon = "1.7.0"
serde_json.workspace = true
tokio.workspace = true
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version="0.3.17", features = ["registry", "env-filter"] }
url = "2.3.1"

[dev-dependencies]
axum-test-helper = "0.3.0"
criterion = "0.5.1"
