[package]
name = "ccv-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
ccv-core.workspace = true
hyper = { version = "1.1.0", features = ["full"] }
rayon = "1.7.0"
serde_json.workspace = true
tokio.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version="0.3.18", features = ["registry", "env-filter"] }
url = "2.5.0"

[dev-dependencies]
axum-test = "14.2.2"
criterion = "0.5.1"
